--- a/stdlib/BUILD.bazel
+++ b/stdlib/BUILD.bazel
@@ -32,7 +32,7 @@ COMPFLAGS = [
     # "-safe-string", "-strict-formats"
 ]
 
-MODULE_OPTS = COMPFLAGS
+MODULE_OPTS = [] ## COMPFLAGS
 CAMLINTERNAL_OPTS = COMPFLAGS + ["-nopervasives"]
 
 # MODULE_OPTS = ROOT_MODULE_OPTS
@@ -1029,11 +1029,11 @@ bootstrap_module(
     name   = "Stdlib.Either",
     struct = "either.ml",
     sig    = "Stdlib.Either_cmi",
-    opts = MODULE_OPTS,
-    primitives = PRIMITIVES,
-    deps   = [
-    ],
-    data = ["//runtime:primitives"],
+    # opts = MODULE_OPTS,
+    # primitives = PRIMITIVES,
+    # deps   = [
+    # ],
+    # data = ["//runtime:primitives"],
     # visibility = ["//visibility:public"]
 )
 
@@ -1041,12 +1041,12 @@ bootstrap_signature(
     ns   = ":Stdlib",
     name = "Stdlib.Either_cmi",
     src  = "either.mli",
-    opts = SIG_OPTS,
-    primitives = PRIMITIVES,
-    deps   = [
-        # ":Stdlib"
-    ],
-    data = ["//runtime:primitives"],
+    # opts = SIG_OPTS,
+    # primitives = PRIMITIVES,
+    # deps   = [
+    #     # ":Stdlib"
+    # ],
+    # data = ["//runtime:primitives"],
     # visibility = ["//visibility:public"]
 )
 
