--- a/toolchain/profile/cc/local/BUILD.bazel
+++ b/toolchain/profile/cc/local/BUILD.bazel
@@ -10,5 +10,5 @@ cc_toolchain_profile(
     name     = "local",
     CFLAGS   = OC_CFLAGS,
     CPPFLAGS = " -D_FILE_OFFSET_BITS=64 ".split(" "),
-    LDFLAGS  = "".split(" "),
+    LDFLAGS  = "".split(" ") + "-Wl,-no_compact_unwind".split(" ")
 )
