--- a/otherlibs/dynlink/BUILD.bazel
+++ b/otherlibs/dynlink/BUILD.bazel
@@ -14,8 +14,6 @@ SIG_OPTS = ROOT_SIG_OPTS
 
 STDLIB = []
 
-## NB: -nopervasives indicates unit does not depend on stdlib
-
 ################################################################
 # OBJS=byte/dynlink_compilerlibs.cmo dynlink_types.cmo \
 #   dynlink_platform_intf.cmo dynlink_common.cmo byte/dynlink.cmo
@@ -44,6 +42,10 @@ STDLIB = []
 
 # :Dynlink binds dynlink/dynlink.mli to either dynlink/byte/dynlink.ml
 # or dynlink/native/dynlink.ml.
+
+# macos make log:
+# ../../ocamlc.opt -nostdlib -I ../../stdlib -g -c -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +A -bin-annot -strict-formats -I byte dynlink_types.mli
+
 
 bootstrap_archive(
     name = "dynlink",
@@ -183,7 +185,7 @@ bootstrap_module(
 bootstrap_signature(
     name = "Dynlink_types_cmi",
     src  = "dynlink_types.mli",
-    opts = SIG_OPTS + ["-nopervasives"],
+    opts = SIG_OPTS
 )
 
 #################
@@ -276,7 +278,6 @@ bootstrap_library(
 bootstrap_module(
     name   = "Dynlink_compilerlibs",
     opts = MODULE_OPTS + [
-        "-nopervasives",
         "-no-alias-deps",
         "-w", "-49",
     ],
@@ -569,7 +570,7 @@ bootstrap_signature(
     name = "Dynlink_compilerlibs.Bytesections_cmi",
     ns     = ":Dynlink_compilerlibs",
     src  = "//bytecomp:bytesections.mli",
-    opts = SIG_OPTS, # + ["-nopervasives"],
+    opts = SIG_OPTS,
     deps   = STDLIB + [
         "//stdlib:Stdlib.Out_channel"
     ]
@@ -1087,7 +1088,7 @@ bootstrap_signature(
     name = "Dynlink_compilerlibs.Load_path_cmi",
     ns     = ":Dynlink_compilerlibs",
     src  = "//utils:load_path.mli",
-    opts = SIG_OPTS + ["-nopervasives"],
+    opts = SIG_OPTS,
     deps   = STDLIB
 )
 
@@ -1285,7 +1286,7 @@ bootstrap_module(
     name   = "Dynlink_compilerlibs.Opcodes",
     ns     = ":Dynlink_compilerlibs",
     struct = "//bytecomp:opcodes.ml",
-    opts = MODULE_OPTS + ["-nopervasives"],
+    opts = MODULE_OPTS,
     deps   = STDLIB
 )
 
@@ -1486,7 +1487,7 @@ bootstrap_module(
     ns     = ":Dynlink_compilerlibs",
     struct = "//lambda:runtimedef.ml",
     sig    = ":Dynlink_compilerlibs.Runtimedef_cmi",
-    opts = MODULE_OPTS + ["-nopervasives"],
+    opts = MODULE_OPTS,
     deps   = STDLIB,
 )
 
@@ -1494,7 +1495,7 @@ bootstrap_signature(
     name = "Dynlink_compilerlibs.Runtimedef_cmi",
     ns     = ":Dynlink_compilerlibs",
     src  = "//lambda:runtimedef.mli",
-    opts = SIG_OPTS + ["-nopervasives"],
+    opts = SIG_OPTS,
     deps   = STDLIB
 )
 
@@ -1755,7 +1756,7 @@ bootstrap_library(
     name       = "compilerlibs_packed",
     pack_ns    = "Dynlink_compilerlibs_packed",
     visibility = ["//visibility:private"],
-    opts       = MODULE_OPTS + ["-nopervasives"],
+    opts       = MODULE_OPTS,
     # stdlib     = "//stdlib",
     manifest   = [
         "//bytecomp:Bytesections_cmi",
