--- a/platforms/BUILD.bazel
+++ b/platforms/BUILD.bazel
@@ -4,26 +4,12 @@ exports_files(["BUILD.bazel"])
 
 package(default_visibility = ["//visibility:public"])
 
-config_setting(name = "windows_x86_32?",
-               constraint_values = [
-                   "@platforms//cpu:x86_32",
-                   "@platforms//os:windows"
-               ])
-
-
-# see //:xtarget for list of architectures
-
 constraint_setting(name = "platform")
 
 constraint_value(name = "boot?",   constraint_setting = ":platform")
 platform(name = "boot",
          parents = ["@local_config_platform//:host"],
          constraint_values = [":boot?"])
-
-constraint_value(name = "baseline?",   constraint_setting = ":platform")
-platform(name = "baseline",
-         parents = ["@local_config_platform//:host"],
-         constraint_values = [":baseline?"])
 
 constraint_value(name = "dev?",   constraint_setting = ":platform")
 platform(name = "dev",
@@ -40,17 +26,29 @@ platform(name = "vm",
          parents = ["@local_config_platform//:host"],
          constraint_values = [":vm?"])
 
-# Bazel-defined arch names
-# see https://github.com/bazelbuild/platforms/blob/main/cpu/BUILD
+################################################################
+config_setting(name = "linux_amd64?",
+               constraint_values = ["@platforms//cpu:amd64",
+                                    "@platforms//os:linux"])
+config_setting(name = "macos_amd64?",
+               constraint_values = ["@platforms//cpu:amd64",
+                                    "@platforms//os:macos"])
 
-##FIXME: move thest to //platforms/cpu
+alias(name = "linux_x86_64?", actual = ":linux_amd64")
+alias(name = "macos_x86_64?", actual = ":macos_amd64")
 
-# OCaml-defined names used for platform names:
-platform(name = "amd64", constraint_values = ["@platforms//cpu:x86_64"])
-platform(name = "arm", constraint_values = ["@platforms//cpu:arm"])
-platform(name = "arm64", constraint_values = ["@platforms//cpu:arm64"])
-platform(name = "i386", constraint_values = ["@platforms//cpu:i386"])
-platform(name = "power", constraint_values = ["@platforms//cpu:ppc"])
-platform(name = "riscv", constraint_values = ["@platforms//cpu:riscv64"])
-platform(name = "s390x", constraint_values = ["@platforms//cpu:s390x"])
+config_setting(name = "linux_x86_32?",
+               constraint_values = ["@platforms//cpu:x86_32",
+                                    "@platforms//os:linux"])
+config_setting(name = "macos_x86_32?",
+               constraint_values = ["@platforms//cpu:x86_32",
+                                    "@platforms//os:macos"])
+
+config_setting(name = "linux_arm64?",
+               constraint_values = ["@platforms//cpu:arm64",
+                                    "@platforms//os:linux"])
+config_setting(name = "macos_arm64?",
+               constraint_values = ["@platforms//cpu:arm64",
+                                    "@platforms//os:macos"])
+
 
