--- a/platforms/os/BUILD.bazel
+++ b/platforms/os/BUILD.bazel
@@ -1,9 +1,4 @@
-config_setting(name = "linux?",
-               constraint_values = ["@platforms//os:linux"])
-
-config_setting(name = "macos?",
-               constraint_values = ["@platforms//os:macos"])
-
-config_setting(name = "windows?",
-               constraint_values = ["@platforms//os:windows"])
+config_setting(name="linux?", constraint_values=["@platforms//os:linux"])
+config_setting(name="macos?", constraint_values=["@platforms//os:macos"])
+config_setting(name="windows?", constraint_values=["@platforms//os:windows"])
 
