add //boot/bin:ocamlc, sh_binary w/boot:ocamlc, runtime in runfiles
* makes boot compiler target executable
* toolchains needing the boot compiler depend on //boot/bin:ocamlc
instead of boot:ocamlc

--- a/boot/bin/BUILD.bazel
+++ b/boot/bin/BUILD.bazel
@@ -28,6 +28,18 @@ load("//config:CONFIG.bzl",
 alias(
     name   = "ocamlrun",
     actual = "//runtime:ocamlrun",
+sh_binary(
+    name = "ocamlc",
+    srcs = ["ocamlc.sh"],
+    data = [
+        "//boot:ocamlc",
+        "//runtime:ocamlrun"
+    ],
+    deps = ["@bazel_tools//tools/bash/runfiles"]
+)
+
+boot_ocamlc(
+    name   = "xocamlc"
 )
 
 alias(
